add footer.html and ajusting some layout

--- a/layouts/archive/list.html
+++ b/layouts/archive/list.html
@@ -1,4 +1,12 @@
 {{ define "main" }}
+<div class="hr-box my-4">
+    <div class="hr-box-sm hr-orange"></div>
+    <div class="hr-box-sm hr-yellow"></div>
+    <div class="hr-box-sm hr-purple "></div>
+    <div class="hr-box-sm hr-green "></div>
+    <div class="hr-box-sm hr-blue "></div>
+    <div class="hr-box-sm hr-red"></div>
+</div>
 <div class="row justify-content-center">
     <div class="col-12 col-md-10 pb-5">
         <div class="gradient-box">
