--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -26,6 +26,7 @@
       <link rel="stylesheet" href="{{ relURL ($.Site.BaseURL) }}{{ . }}">
     {{ end }}
 
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     {{ with .OutputFormats.Get "RSS" }}
       <link href="{{ .RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ $.Site.Title }}" />
