--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,4 +1,4 @@
-<div class="container-fluid shadow-lg p-3 mb-5 mt-4 bg-white rounded">
+<div class="container-fluid shadow p-3 mb-5 mt-4 bg-white rounded-lg">
     <div class="row justify-content-center">
         <div class="col text-center">
             <div class="custom-sumary-title pt-1 pt-md-2">
