add postcopyright and rewrite something

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -12,7 +12,7 @@
             {{ end }}
         </section>
     </article>
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mt-4 mt-md-5">
         {{ template "_internal/pagination.html" . }}
     </div>
 </div>
