--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -24,7 +24,7 @@
     <img src="{{ . }}" alt="" class="img-fluid">
     {{ else }}
         <div class="row justify-content-center px-1 px-sm-3 mt-1 mt-md-2">
-            <p class="custom-text-muted">{{ .Summary }}......</p>     
+            <p class="custom-text-muted">{{ .Summary }}</p>     
         </div>
     {{ end }}
     <div class="row justify-content-center mb-1 mb-md-2">
