--- a/layouts/partials/postCopyRight.html
+++ b/layouts/partials/postCopyRight.html
@@ -1,15 +1,14 @@
-<div class="container custom-border-left border-warning m-2" style="background-color: antiquewhite; width: 90%">
+<div class="container custom-border-left border-warning m-2 my-md-4 p-2" style="background-color: antiquewhite;width: auto;">
     <div >
         <span>
         <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-woshizuozhe"></use>
-        </svg>    
-        {{ .Page.Params.Author }}</span>
+        </svg>作者：
+        {{- .Page.Params.Author }}</span>
     </div>
     <div>
         <svg class="icon" aria-hidden="true">
-            <use xlink:href="#icon-fenxiang2"></use>
-        </svg>
-        <a href="{{ .Permalink }}">{{ .Permalink  }}</a></div>
-    <div style="font-size: 90%;">版权：此文章版权归<a href="https://codepool.top">CodePool</a>所有。允许转载，但禁止商用！</div>
+            <use xlink:href="#icon-suoding"></use>
+        </svg>版权：此文章版权归<a href="https://codepool.top">CodePool</a>所有。允许转载，但禁止商用！
+    </div>
 </div>
