--- a/static/custom_css/style.css
+++ b/static/custom_css/style.css
@@ -49,8 +49,8 @@ H2 {
     color: #666666;
     display: block;
     font-size: 1.3em;
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
+    margin-block-start: 1.6em;
+    margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     font-weight: bold;
@@ -59,8 +59,6 @@ H2 {
 
 H3 {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
-    margin-top: 40px;
-    margin-bottom: 30px;
     border-left: 4px solid purple;
     border-bottom: 1px LightGrey solid;
     padding-left: 5px;
@@ -68,8 +66,8 @@ H3 {
     line-height: 150%;
     color: #666666;
     display: block;
-    font-size: 1.1em;
-    margin-block-start: 1em;
+    font-size: 1.15em;
+    margin-block-start: 2em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
@@ -79,17 +77,16 @@ H3 {
 
 H4 {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
-    margin-top: 40px;
-    margin-bottom: 30px;
     border-left: 4px solid purple;
+    border-bottom: 1px LightGrey solid;
     padding-left: 5px;
     width: 98%;
     line-height: 150%;
     color: #666666;
     display: block;
-    font-size: 0.8em;
-    margin-block-start: 1.21em;
-    margin-block-end: 1.21em;
+    font-size: 1em;
+    margin-block-start: 1.8em;
+    margin-block-end: 1.2em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     font-weight: bold;
