--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,4 +1,4 @@
-<div class="container-fluid custom-shadow p-3 mb-2 mt-4 bg-white rounded-lg">
+<div class="container-fluid shadow p-3 mb-2 mt-4 bg-white rounded-lg">
     <div class="row justify-content-center">
         <div class="col text-center">
             <div class="custom-sumary-title pt-1 pt-md-2">
@@ -21,7 +21,7 @@
         </div>
     </div>
     {{ with .Page.Params.summaryImg }}
-    <img src="{{ . }}" alt="" class="img-fluid">
+    <img src="{{ . }}" alt="" class="img-fluid" style="width: 80%; box-shadow:0 0 0px #4f5522;">
     {{ else }}
         <div class="row justify-content-center px-1 px-sm-3 mt-1 mt-md-2">
             <p class="custom-text-muted">{{ .Summary }}</p>     
