--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,16 +1,20 @@
 <footer class="border-top mt-3 py-2" style="text-align: center;">
-    <div><span style="font-size: 95%;">Copyright &COPY;{{ if eq (now.Format "2006") "2019"}}2019{{ else }}2019-{{ now.Format "2006" }}{{ end }}</span></div>
+    <div><span>Copyright&nbsp;&COPY;&nbsp;{{ if eq (now.Format "2006") "2019"}}2019{{ else }}2019-{{ now.Format "2006" }}{{ end }}</span></div>
     <div>
-        <span style="font-size: 90%">
+        <span>
+            粤ICP备19088648号-1	
+        </span>
+    </div>
+    <div>
+        <span>
         <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-powerstation"></use>
         </svg>
         Power By <a href="https://gohugo.io/">Hugo</a>&shortmid;</span>
-        <span style="font-size: 90%">
+        <span>
         <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-library_theme_select"></use>
         </svg>
         Theme By <a href="https://github.com/Busui/gohugo-theme-yellow">Busui</a></span>
     </div>
-    
 </footer>
