update tag name

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -45,12 +45,12 @@
   </head>
 
   <body>
-      <div class="container" id="test_home">
+      <main class="container" id="test_home">
         {{ block "home_header" . }}{{ partial "home_header.html" .}}{{ end }}
         {{ block "main" . }}{{ end }}
         {{ block "footer" . }}{{ partialCached "footer.html" . }}{{ end }}
         {{ block "backtotop" .}}{{ partial "backToTop.html" }}{{ end }}
         {{ block "scripts" . }}{{ partialCached "site-scripts.html" . }}{{ end }}
-      </div>    
+      </main>    
   </body>
 </html>
