--- a/layouts/partials/home_header.html
+++ b/layouts/partials/home_header.html
@@ -1,4 +1,4 @@
-<div class="container mt-1 mt-md-5" id="index_home">
+<header class="container mt-1 mt-md-5" id="index_home">
     <div class="row justify-content-center">
         <div class="col-12 text-center">
             <div class="my-3" style="font-size:2em;">
@@ -43,4 +43,4 @@
             </div>
         </nav>
     </div>
-</div>
+</header>
