--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,9 +1,11 @@
 {{ define "main" }}
 <div class="container-fluid px-0 px-sm-3">
     <article>
-        <section>
-            {{ .Content }}
-        </section>
+        {{ with .Content }}
+            <section>
+                {{ . }}
+            </section>
+        {{ end }}
         <section>
             {{ range .Paginator.Pages }}
             <div>
