--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="container-fluid px-1 px-sm-3">
+<main class="container-fluid px-1 px-sm-3">
   <section id="main">
     <h1 id="title">{{ .Title }}</h1>
     <div class="row justify-content-end mx-2 mx-sm-4">
@@ -87,5 +87,5 @@
         {{ end }}
     </div>
   </aside>
-</div>
+</main>
 {{ end }}
