--- a/static/custom_css/style.css
+++ b/static/custom_css/style.css
@@ -21,7 +21,7 @@ li {
 }
 
 H1 {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+    font-family: serif, Palatino, Helvetica, STKaiti, SimSun;
     margin-bottom: 0px;
     padding: 8px 0px 3px 6px;
     border-bottom: 2px LightGrey solid;
@@ -39,7 +39,7 @@ H1 {
 }
 
 H2 {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+    font-family: serif, Palatino, Helvetica, STKaiti, SimSun;
     margin-bottom: 0px;
     padding: 3px;
     border-bottom: 1px LightGrey solid;
@@ -58,7 +58,7 @@ H2 {
 
 
 H3 {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+    font-family: serif, Palatino, Helvetica, STKaiti, SimSun;
     border-left: 4px solid purple;
     border-bottom: 1px LightGrey solid;
     padding-left: 5px;
@@ -76,7 +76,7 @@ H3 {
 
 
 H4 {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+    font-family: serif, Palatino, Helvetica, STKaiti, SimSun;
     border-left: 4px solid purple;
     border-bottom: 1px LightGrey solid;
     padding-left: 5px;
