--- a/layouts/partials/home_header.html
+++ b/layouts/partials/home_header.html
@@ -8,11 +8,13 @@
             </div>
         </div>
         <div class="w-100"></div>
+        {{ with .Site.Params.motto }}
         <div>
             <p class="text-muted text-center">
-                咱也不敢说，咱也没敢问！
+                {{ . }}
             </p>
         </div>
+        {{ end }}
     </div>
     <div class="row justify-content-center">
         <nav class="navbar navbar-expand-md justify-content-center">
