update highlight syntax to highlight.js

--- a/layouts/partials/site-scripts.html
+++ b/layouts/partials/site-scripts.html
@@ -2,3 +2,4 @@
 {{ range $script.js }}
   <script src="{{ relURL (printf "%s" .) }}"></script>
 {{ end }}
+<script>hljs.initHighlightingOnLoad();</script>
