--- a/layouts/partials/home_header.html
+++ b/layouts/partials/home_header.html
@@ -2,9 +2,7 @@
     <div class="row justify-content-center">
         <div class="col-12 text-center">
             <div class="my-3" style="font-size:2em;">
-                
-                    <a href="{{ .Site.BaseURL }}" class="px-3 px-md-5 badge custom-badge-dark text-wrap py-1 py-md-2">codepool</a>
-            
+                <a href="{{ .Site.BaseURL }}" class="px-3 px-md-5 badge custom-badge-dark text-wrap py-1 py-md-2">{{ .Site.Params.siteBrand | default "codepool" }}</a>
             </div>
         </div>
         <div class="w-100"></div>
