--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -27,15 +27,15 @@
     {{ end }}
 
     <!-- third-generation iPad with high-resolution Retina display: -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ .Site.BaseURL }}img/favicon144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ .Site.BaseURL }}/img/favicon144.png">
     <!-- iPhone with high-resolution Retina display: -->
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ .Site.BaseURL }}img/favicon114.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ .Site.BaseURL }}/img/favicon114.png">
     <!-- first- and second-generation iPad: -->
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ .Site.BaseURL }}img/favicon72.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ .Site.BaseURL }}/img/favicon72.png">
     <!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-    <link rel="apple-touch-icon-precomposed" href="{{ .Site.BaseURL }}img/favicon57.png">
+    <link rel="apple-touch-icon-precomposed" href="{{ .Site.BaseURL }}/img/favicon57.png">
     <!-- basic favicon -->
-    <link rel="shortcut icon" href="{{ .Site.BaseURL }}img/favicon32.png">
+    <link rel="shortcut icon" href="{{ .Site.BaseURL }}/img/favicon32.png">
 
     {{ with .OutputFormats.Get "RSS" }}
       <link href="{{ .RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ $.Site.Title }}" />
