--- a/layouts/partials/home_header.html
+++ b/layouts/partials/home_header.html
@@ -1,14 +1,14 @@
 <header class="container mt-1 mt-md-5" id="index_home">
     <div class="row justify-content-center">
         <div class="col-12 text-center">
-            <div class="my-3" style="font-size:2em;">
+            <div class="my-3" style="font-size:2rem;">
                 <a href="{{ .Site.BaseURL }}" class="px-3 px-md-5 badge custom-badge-dark text-wrap py-1 py-md-2">{{ .Site.Params.siteBrand | default "codepool" }}</a>
             </div>
         </div>
         <div class="w-100"></div>
         {{ with .Site.Params.motto }}
         <div>
-            <p class="text-muted text-center">
+            <p class="text-muted text-center custom-text-muted mobile-custom-size">
                 {{ . }}
             </p>
         </div>
