--- a/static/custom_css/style.css
+++ b/static/custom_css/style.css
@@ -348,3 +348,14 @@ p>code {
     font-size: 0.5em;
     font-weight: bold;
 }
+
+blockquote {
+    padding-left: 10px;
+    border-left: 5px solid #dee2e6;
+    color: #6a737d;
+    margin-left: 10px;
+}
+
+strong {
+    color: black;
+}
