--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,12 +7,12 @@
         <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-powerstation"></use>
         </svg>
-        Power By <a href="https://gohugo.io/">Hugo</a>&shortmid;</span>
+        Power By <a href="https://gohugo.io/" class="custom-footer-a">Hugo</a>&shortmid;</span>
         <span>
         <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-library_theme_select"></use>
         </svg>
-        Theme By <a href="https://github.com/Busui/gohugo-theme-yellow">Busui</a></span>
+        Theme By <a href="https://github.com/Busui/gohugo-theme-yellow" class="custom-footer-a">Busui</a></span>
     </aside>
     <div class="footerest">
         <span>
