--- a/layouts/partials/home_header.html
+++ b/layouts/partials/home_header.html
@@ -1,4 +1,4 @@
-<header class="container mt-1 mt-md-5" id="index_home">
+<header class="container mt-1 mt-md-5" id="header-id">
     <div class="row justify-content-center">
         <div class="col-12 text-center">
             <div class="my-3" style="font-size:2rem;">
