--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -66,13 +66,13 @@
         </div>
         {{ end }}
         {{ with .NextInSection }}
-        {{ if .PrevInSection }}
-        <div class="col-12 col-md-5">
-            <span class="float-md-right">
-        {{ else }}
-        <div class="col-12">
-            <span>
-        {{ end }}
+          {{ if $.PrevInSection }}
+              <div class="col-12 col-md-5">
+                  <span class="float-md-right">
+          {{ else }}
+              <div class="col-12">
+                  <span>
+          {{ end }}
             <svg class="icon" aria-hidden="true">
               <use xlink:href="#icon-NexttrackFilled"></use>
             </svg>下一篇
